Add notebook with outputs

--- a/notebooks/handwritten_az_recognition.ipynb
+++ b/notebooks/handwritten_az_recognition.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "print(\"Loading dataset...\")\n",
-    "data = pd.read_csv('dataset/A_Z Handwritten Data.csv')\n",
+    "data = pd.read_csv('../dataset/A_Z Handwritten Data.csv')\n",
     "data.columns = ['label'] + [f'pixel{i}' for i in range(784)]"
    ]
   },
@@ -409,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3.11.9",
    "language": "python",
    "name": "python3"
   },
